--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "html-react-parser": "^3.0.8",
     "next": "13.1.5",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
